--- a/src/jade/layouts/default.jade
+++ b/src/jade/layouts/default.jade
@@ -7,9 +7,12 @@ html.no-js(lang='en', ng-app='ministryApp')
         block description
             meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto+Slab:700,400&subset=latin,cyrillic')
+        link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:700,400&subset=latin,cyrillic')
+        link(rel='stylesheet', href='http://cdn.kendostatic.com/2014.3.1119/styles/kendo.common-material.min.css')
+        link(rel='stylesheet', href='http://cdn.kendostatic.com/2014.3.1119/styles/kendo.material.min.css')
+        link(rel='stylesheet', href='http://cdn.kendostatic.com/2014.3.1119/styles/kendo.material.mobile.min.css')
+        link(rel='stylesheet', href='http://cdn.kendostatic.com/2014.3.1119/styles/kendo.dataviz.material.min.css')
         link(rel='stylesheet', href='css/app.css')
-        block style
     body(layout='column', layout-fill, md-theme="light-green", ng-controller='HomeCtrl')
         section(layout='row', layout-fill, flex)
             section(layout='column', flex, layout-fill)
@@ -38,14 +41,4 @@ html.no-js(lang='en', ng-app='ministryApp')
                                 span.fa.fa-users
                             md-button(flex)
                                 span.fa.fa-pencil
-
-        block script
-            // Google Analytics: change UA-XXXXX-X to be your site's ID.
-            script(src='js/app.js')
-            script
-                | (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                | function(){(b[l].q=b[l].q || []).push(arguments)});b[l].l=+new Date;
-                | e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-                | e.src='//www.google-analytics.com/analytics.js';
-                | r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                | ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        script(src='js/app.js')
