--- a/src/jade/views/records.jade
+++ b/src/jade/views/records.jade
@@ -1,5 +1,5 @@
 md-content
-    md-subheader.md-primary {{ "Return visits" | translate }}
+    md-subheader.md-primary {{ "House-to-house records" | translate }}
     md-list.padded
         md-item
             md-item-content
