Updated to alpha1

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -52,3 +52,17 @@ md-item {
 .k-state-selected > .k-link {
   background: #8BC34A;
   border-radius: 4em; }
+
+.grid-icon {
+  font-size: 3rem;
+  color: #333; }
+
+.fixed-bottom-right {
+  position: fixed;
+  bottom: 1em;
+  right: 1em; }
+
+.fixed-bottom-left {
+  position: fixed;
+  bottom: 1em;
+  left: 1em; }
