--- a/src/jade/views/report.jade
+++ b/src/jade/views/report.jade
@@ -1,6 +1,41 @@
-md-content
-    md-subheader.md-primary {{ "Report" | translate }}
+md-content(layout='column', layout-fill, layout-padding, ng-swipe-left='nextMonth()', ng-swipe-right='prevMonth()')
+    .md-toolbar-tools(layout='row', layout-fill)
+        md-button(ng-click='prevMonth()')
+            span.fa.fa-caret-left
+        div(flex)
+        div {{ date|dateLocale:'MMMM yyyy' }}
+        div(flex)
+        md-button(ng-click='nextMonth()')
+            span.fa.fa-caret-right
+    md-subheader.md-primary {{ "Monthly report" | translate }}
     md-list.padded
         md-item
             md-item-content
-                h3 {{ "Coming soon!" | translate }}
+                .md-tile-left {{ month.h }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Hours" | translate:lang }}
+        md-item
+            md-item-content
+                .md-tile-left {{ month.p }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Hours (planned)" | translate:lang }}
+        md-item
+            md-item-content
+                .md-tile-left {{ month.t }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Tracts & brochures" | translate }}
+        md-item
+            md-item-content
+                .md-tile-left {{ month.b }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Books" | translate }}
+        md-item
+            md-item-content
+                .md-tile-left {{ month.r }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Return visits" | translate }}
+        md-item
+            md-item-content
+                .md-tile-left {{ month.s }}
+                .md-tile-content(layout='row')
+                    h3 {{ "Bible studies" | translate }}
