--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -1,1 +1,1 @@
-<div layout="column" layout-fill="layout-fill"><div flex="flex" style="background: url(&quot;http://lorempixel.com/1920/1080/nature&quot;)"></div></div>
+<div flex="flex" layout="column" layout-fill="layout-fill"><md-subheader ng-swipe-left="prevDay()" ng-swipe-right="nextDay()" class="md-primary">{{ "Welcome" | translate }}</md-subheader><md-content></md-content></div>
