--- a/src/jade/views/home.jade
+++ b/src/jade/views/home.jade
@@ -1,3 +1,3 @@
-div(layout='column', layout-fill)
-    div(flex, style='background: url("http://lorempixel.com/1920/1080/nature")')
-
+div(flex, layout='column', layout-fill)
+    md-subheader.md-primary(ng-swipe-left='prevDay()', ng-swipe-right='nextDay()') {{ "Welcome" | translate }}
+    md-content
