Updated appearance, swipe polarity

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak, manifest="manifest.appcache")
+html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak)
     head
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -12,7 +12,7 @@ html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak, manife
             md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id='left', md-is-locked-open="$media('gt-md')")
                 md-toolbar
                     h1.md-toolbar-tools
-                        div(ng-click='go("/")') {{ "Menu" | translate }}
+                        div(ng-click='go("/")', hide-gt-md) {{ "Menu" | translate }}
                         div(flex)
                         md-button.icon(ng-click='closeNav()', hide-gt-md)
                             span.fa.fa-times
@@ -33,9 +33,10 @@ html.no-js(lang='{{ language }}', ng-app='ministryApp', ng-csp, ng-cloak, manife
                     md-toolbar(md-scroll-shrink)
                         .md-toolbar-tools
                             md-button.icon(ng-click='toggleNav()', hide-gt-md)
-                                span.fa.fa-bars
-                            span(ng-click='toggleNav()')
+                                i.fa.fa-bars
+                            md-button.icon(ng-click='go("/")')
                                 img(src='/img/logo.svg', alt='Ministry App')
+                            md-button(ng-click='go("/")') Service App
                             span(flex)
                             md-button.icon(ng-click='toggleLanguage()') {{ language }}
                     md-content(ng-view, flex='100', layout, layout-fill)
