--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1617,17 +1617,13 @@ md-toolbar.md-light-green-theme {
   color: #fff; }
 
 .home-splash {
-  height: 512px;
-  width: 512px;
+  height: 100%;
+  width: 100%;
   display: block;
   margin: 0 auto;
   padding: 2em;
   max-width: 100%;
   max-height: 100%; }
-  .home-splash img {
-    display: block;
-    height: 100%;
-    width: 100%; }
 
 a, .link {
   cursor: pointer; }
@@ -1675,6 +1671,9 @@ md-toolbar.md-light-green-theme .md-button {
     min-width: 3.167em;
     height: 3.167em;
     border-radius: 3.167em; }
+
+md-toolbar .md-button img, .md-toolbar-tools .md-button img {
+  max-height: 100% !important; }
 
 .k-block, .k-header, .k-grid-header, .k-toolbar, .k-grouping-header, .k-pager-wrap, .k-button, .k-draghandle, .k-treemap-tile, html .km-pane-wrapper .k-header {
   background: #8BC34A; }
