--- a/src/jade/views/calendar.jade
+++ b/src/jade/views/calendar.jade
@@ -1,6 +1,6 @@
 
 md-content(layout='column', layout-fill, layout-padding)
-    md-toolbar(ng-swipe-left='prevDay()', ng-swipe-right='nextDay()')
+    md-toolbar(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevDay()')
                 span.fa.fa-caret-left
@@ -9,7 +9,7 @@ md-content(layout='column', layout-fill, layout-padding)
             div(flex)
             md-button(ng-click='nextDay()')
                 span.fa.fa-caret-right
-    md-subheader.md-primary(ng-swipe-left='prevDay()', ng-swipe-right='nextDay()') {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
+    md-subheader.md-primary(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()') {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
     md-content
         md-list.padded
             md-item
