--- a/src/jade/views/home.jade
+++ b/src/jade/views/home.jade
@@ -1,5 +1,7 @@
 div(flex, layout='column', layout-fill)
     md-subheader.md-primary(ng-swipe-left='prevDay()', ng-swipe-right='nextDay()') {{ "Welcome" | translate }}
-    md-content
-        .home-splash
-            img(src='img/logo.svg')
+    md-content(flex)
+        md-list.padded
+            md-item(ng-click='toggleNav()')
+                md-item-content
+                    p {{ "Click the menu button to start" | translate }}
