Mobile layout improvements

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1613,6 +1613,41 @@
 body {
   color: #333; }
 
+.md-tile-content, .md-tile-content input, md-input-group, md-input-group input {
+  max-width: 100%; }
+
+.md-tile-left {
+  min-width: 36px; }
+
+.md-tile-content {
+  padding-left: 24px;
+  padding-right: 0; }
+
+.no-margin {
+  margin: 0; }
+
+.nav-submenu button {
+  margin-left: 0;
+  margin-right: 0; }
+
+.report-label {
+  font-size: small;
+  text-transform: uppercase;
+  text-align: center; }
+
+.text-left {
+  text-align: left !important; }
+
+md-sidenav.md-sidenav-left, md-sidenav.md-sidenav-right {
+  max-width: 95%;
+  max-height: 100%;
+  overflow: auto; }
+
+md-toolbar.main-nav button, md-toolbar.main-nav .md-button, md-toolbar .md-toolbar-tools button, md-toolbar .md-toolbar-tools .md-button {
+  height: 100%;
+  text-overflow: ellipsis;
+  min-width: 48px; }
+
 md-toolbar.md-light-green-theme {
   color: #fff; }
 
@@ -1671,6 +1706,13 @@ md-toolbar.md-light-green-theme .md-button {
     min-width: 3.167em;
     height: 3.167em;
     border-radius: 3.167em; }
+    md-toolbar.md-light-green-theme .md-button.icon .app-title {
+      position: relative;
+      top: -0.5em;
+      line-height: 2.33;
+      height: 100%;
+      display: inline-block;
+      left: 1em; }
 
 md-toolbar .md-button img, .md-toolbar-tools .md-button img {
   max-height: 100% !important; }
