--- a/src/jade/views/calendar.jade
+++ b/src/jade/views/calendar.jade
@@ -1,12 +1,10 @@
 
 md-content(layout='column', layout-fill, layout-padding)
-    md-toolbar(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
+    md-toolbar.nav-submenu(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()')
         .md-toolbar-tools(layout='row', layout-fill)
             md-button(ng-click='prevDay()')
                 span.fa.fa-caret-left
-            div(flex)
-            md-button(ng-click='goToReport()') {{ "Go to report" | translate }}
-            div(flex)
+            md-button(flex, ng-click='goToReport()') {{ "Go to report" | translate }}
             md-button(ng-click='nextDay()')
                 span.fa.fa-caret-right
     md-subheader.md-primary(ng-swipe-right='prevDay()', ng-swipe-left='nextDay()') {{ date|dateLocale:'EEEE, MMMM d, yyyy' }}
@@ -16,9 +14,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("h", -1)', ng-swipe-right='increment("h", 1)')
                     .md-tile-left {{ day.h }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Hours" | translate:lang }}
+                        div {{ "Hours" | translate:lang }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.h', ng-click='increment("h", -1)')
                                 span.fa.fa-minus
                             md-button(ng-click='increment("h", 1)')
@@ -27,9 +25,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("p", -1)', ng-swipe-right='increment("p", 1)')
                     .md-tile-left {{ day.p }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Hours (planned)" | translate }}
+                        div {{ "Hours (planned)" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.p', ng-click='increment("p", -1)')
                                 span.fa.fa-minus
                             md-button(ng-click='increment("p", 1)')
@@ -38,9 +36,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("m", -1)', ng-swipe-right='increment("m", 1)')
                     .md-tile-left {{ day.m }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Magazines" | translate }}
+                        div {{ "Magazines" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.m', ng-click='increment("m", -1)')
                                 span.fa.fa-minus.link
                             md-button(ng-click='increment("m", 1)')
@@ -49,9 +47,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("t", -1)', ng-swipe-right='increment("t", 1)')
                     .md-tile-left {{ day.t }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Tracts & brochures" | translate }}
+                        div {{ "Tracts & brochures" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.t', ng-click='increment("t", -1)')
                                 span.fa.fa-minus.link
                             md-button(ng-click='increment("t", 1)')
@@ -60,9 +58,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("b", -1)', ng-swipe-right='increment("b", 1)')
                     .md-tile-left {{ day.b }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Books" | translate }}
+                        div {{ "Books" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.b', ng-click='increment("b", -1)')
                                 span.fa.fa-minus.link
                             md-button(ng-click='increment("b", 1)')
@@ -71,9 +69,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("r", -1)', ng-swipe-right='increment("r", 1)')
                     .md-tile-left {{ day.r }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Return visits" | translate }}
+                        div {{ "Return visits" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.r', ng-click='increment("r", -1)')
                                 span.fa.fa-minus.link
                             md-button(ng-click='increment("r", 1)')
@@ -83,9 +81,9 @@ md-content(layout='column', layout-fill, layout-padding)
                 md-item-content(ng-swipe-left='increment("s", -1)', ng-swipe-right='increment("s", 1)')
                     .md-tile-left {{ day.s }}
                     .md-tile-content(layout='row')
-                        h3 {{ "Bible studies" | translate }}
+                        div {{ "Bible studies" | translate }}
                         div(flex)
-                        div(hide-lt-md)
+                        div(hide-sm)
                             md-button(ng-show='day.s', ng-click='increment("s", -1)')
                                 span.fa.fa-minus.link
                             md-button(ng-click='increment("s", 1)')
